# main

./: .gitignore  Dockerfile  README.md  build_and_start.sh  mysqlclient-2.2.0-cp38-cp38-win_amd64.whl  p.patch
server/: .flaskenv  pyproject.toml  sql_app.db
server/server/: app.py
server/server/static/: asset-manifest.json  index.html
server/wugserver/: .pylintrc  constants.py  database.py  main.py
server/wugserver/models/: ai_model_model.py  api_key_model.py  example_prompt_model.py  interaction_model.py  message_create_handler.py  message_draft_model.py  message_model.py  onboarding_history_model.py  system_key_model.py  system_key_usage_mdoel.py  system_key_usage_model.py  tag_model.py  user.py  user_authentication.py  user_model.py  user_password_model.py
server/wugserver/models/ai_models/: abstract_model.py  ai_models.py  echo_model.py  llama_model.py  models.py  openai_model.py  stable_diffusion_model.py
server/wugserver/models/db/: api_key_db_model.py  api_key_model.py  authorization.py  example_prompt_db_model.py  interaction_db_model.py  interaction_model.py  interaction_tag_association.py  message_content_db_model.py  message_db_model.py  message_draft_db_model.py  message_favorite_db_model.py  message_model.py  onboarding_history_db_model.py  system_key_db_model.py  (+8 more)
server/wugserver/routers/: api_keys.py  authentication.py  authorization.py  interactions.py  message_drafts.py  messages.py  password.py  prompts.py  tags.py  users.py
server/wugserver/schema/: api_key.py  authentication.py  interaction.py  message.py  message_draft.py  message_role.py  model_list.py  onboarding_history.py  password.py  prompt.py  tag.py  user.py
server/wugserver/types/: onboarding_types.py  providers.py
(+63 files in other folders)
