[tool.poetry]
name = "wugserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"

[tool.poetry.scripts]
start = "wugserver.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
