[tool.poetry]
name = "wugserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.10"
pydantic = "^1.10.7"
openai = "^0.27.4"
uuid = "^1.30"

[tool.poetry.scripts]
start = "wugserver.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
