[tool.poetry]
name = "wugserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.10"
pydantic = "^1.10.7"
openai = "^0.27.4"
uuid = "^1.30"
python-dotenv = "^1.0.0"
cryptography = "^40.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.2"
sendgrid = "^6.10.0"
pylint = "^2.17.4"
black = "^23.3.0"
pymysql = "^1.0.3"
mysql = "^0.0.3"
mysql-connector-python = "^8.0.33"

[tool.poetry.scripts]
start = "wugserver.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
